add_library(  common STATIC 
              uniqueOrderId.cpp 
              )
#              order.cpp 
#              settings.cpp 
#              dictionary.cpp 
#              fixOrderFactory.cpp 
#              messageLogger.cpp 
#              crypto.cpp 
#              errorlog.cpp 
#              connectionPool.cpp 
#              sociOrder.cpp 
#              errorMessages.cpp
#              connectionTemplate.cpp
#              bpoValidation.cpp
